--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           alt="логотип"
         />
       </a>
-      <address class="header__address">
+      <address class="address header__address">
         <a href="tel:+99995555555">+9 999 555 5555</a><br>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>наб. Принсенграхт 263-265, Амстердам</p>
@@ -54,8 +54,8 @@
         <h2 class="lots__heading">Лоты</h2>
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
-            <a href="#" class="card-link">
-              <article class="card card_type_film">
+            <a href="#" class="card-link card_type_film">
+              <article class="card">
                 <div class="overlay"></div>
                 <h3 class="card__title">Фильм режиссёра, который  бросил киношколу</h3>
                 <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
@@ -63,8 +63,8 @@
             </a>
           </li>
           <li class="lots__card-list-item">
-            <a href="#" class="card-link">
-              <article class="card card_type_book">
+            <a href="#" class="card-link card_type_book">
+              <article class="card">
                 <div class="overlay"></div>
                 <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
                 <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
@@ -72,8 +72,8 @@
             </a>
           </li>
           <li class="lots__card-list-item">
-            <a href="#" class="card-link">
-              <article class="card card_type_picture">
+            <a href="#" class="card-link card_type_picture">
+              <article class="card">
                 <div class="overlay"></div>
                 <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
                 <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
@@ -117,7 +117,7 @@
       </section> 
     </main>
     <footer class="footer">
-      <address class="footer__address">
+      <address class="address">
         <a href="tel:+99995555555">+9 999 555 5555</a><br>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>наб. Принсенграхт 263-265, Амстердам</p>
